--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,12 @@ html * {
 }
 
 body {
-  height:100%; background:none transparent;
+  height:100%;
+   background-color: #0c70b4;
+  color: #fff;
+  font: normal 400 18px "PT Sans", san-serif;
+  -webkit-font-smoothing: antialiased;
+}
 }
 
 
@@ -68,7 +73,7 @@ a.btn-colors:hover {
 .btn-s {
   background: none;
   border: 2px solid #1883b5;
-  color: #1883b5;
+  color: #5cb85c;
   font-family: 'Roboto', arial, sans-serif;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
