--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
     script(src="/js/functions.js", type="application/javascript")
     script(src="/js/typing-visualizer.js", type="application/javascript")
     script(src="/js/autocomplete-disabler.js", type="application/javascript")
-    script(src="https://typingdna.com/scripts/typingdna.js")
+    script(src="//typingdna.com/scripts/typingdna.js?v2.8")
     script(type="text/javascript", src="/plugins/jquery-1.12.3.min.js")
     script.
       session_id = '#{sid}';
