--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
     script(src="/js/typing-visualizer.js", type="application/javascript")
     script(src="/js/autocomplete-disabler.js", type="application/javascript")
     script(src="//typingdna.com/scripts/typingdna.js?v2.8")
+    link(href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700", rel="stylesheet")
     script(type="text/javascript", src="/plugins/jquery-1.12.3.min.js")
     script.
       session_id = '#{sid}';
