--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     title= title
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta (http-equiv="Content-Security-Policy" content="upgrade-insecure-requests")
     link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/style.css" type="text/css")
     script(src="/js/functions.js", type="application/javascript")
